Cleaning and refacto